--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                                 <div class="group-title group-title-1 bg-secondary">
                                                     <h2 class="main-title">we are <span>Nerdism</span> <span class="dot"></span> <span class="mute-title">Who?</span></h2></div>
                                                 <div class="group-wrapper">
-                                                    <div class="text">We are developers, designers and writers who specialize in creative problem-solving and strategic storytelling. Whether working with Fortune 500’s or non-profits, producing software or crafting logos, the narrative is always king. We believe there’s power in your story. We find it, ignite it and unleash it to the world.</div>
+                                                    <div class="text">We are developers, designers and writers who specialize in creative problem-solving and strategic storytelling. Whether working with Fortune 500’s or non-profits, producing software, websites, apps or crafting logos, the narrative is always king. We believe there’s power in your idea. We find it, ignite it and unleash it to the world.</div>
                                                     <div class="text"></div>
                                                     <br>
                                                     <div class="group-button"><a href="about-us.html" class="btn btn-main">Read More</a></div>
@@ -263,25 +263,25 @@
                                                                         <div class="progress-item">
                                                                             <div class="heading">Designing</div>
                                                                             <div class="progress">
-                                                                                <div data-width="90%" class="progress-bar"></div>
+                                                                                <div data-width="100%" class="progress-bar"></div>
                                                                             </div>
                                                                         </div>
                                                                         <div class="progress-item">
-                                                                            <div class="heading">Web Developing</div>
+                                                                            <div class="heading">Developing</div>
                                                                             <div class="progress">
-                                                                                <div data-width="80%" class="progress-bar"></div>
+                                                                                <div data-width="100%" class="progress-bar"></div>
                                                                             </div>
                                                                         </div>
                                                                         <div class="progress-item">
-                                                                            <div class="heading">Testing</div>
+                                                                            <div class="heading">Branding</div>
                                                                             <div class="progress">
-                                                                                <div data-width="70%" class="progress-bar"></div>
+                                                                                <div data-width="100%" class="progress-bar"></div>
                                                                             </div>
                                                                         </div>
                                                                         <div class="progress-item">
-                                                                            <div class="heading">Studio</div>
+                                                                            <div class="heading">Great People</div>
                                                                             <div class="progress">
-                                                                                <div data-width="85%" class="progress-bar"></div>
+                                                                                <div data-width="100%" class="progress-bar"></div>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -360,7 +360,7 @@
                                                                 <div class="box-icon"><i class="alab-writing-notes"></i></div>
                                                                 <div class="box-info">
                                                                     <div data-count="689" class="number">0</div>
-                                                                    <div class="title">Work View</div>
+                                                                    <div class="title">Coffee Consumed (Cups)</div>
                                                                 </div>
                                                             </div>
                                                         </div>
