Mission and Values add / What we do Content

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                                                     <div class="box-icon">
                                                                         <div class="number icon-1">01</div><a href="#" class="icons"><i class="alab-ux-ui"></i></a><a href="#" class="title">UX/UI Design</a></div>
                                                                     <div class="box-info">
-                                                                        <div class="text">Enim ad minim veniam, quisnotrud exercitation ullamco labris.</div>
+                                                                        <div class="text">We design intelligible Web or screen interfaces, ensure they work, and make them an exciting and memorable part of the customer experience.</div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -160,7 +160,7 @@
                                                                     <div class="box-icon">
                                                                         <div class="number icon-1">02</div><a href="#" class="icons"><i class="alab-web-developing"></i></a><a href="#" class="title">Web Developing</a></div>
                                                                     <div class="box-info">
-                                                                        <div class="text">Enim ad minim veniam, quisnotrud exercitation ullamco labris.</div>
+                                                                        <div class="text">We code and modify websites, from layout to function, creating visually appealing sites with clear navigation.</div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -171,7 +171,7 @@
                                                                     <div class="box-icon">
                                                                         <div class="number icon-1">03</div><a href="#" class="icons"><i class="alab-threed-studio"></i></a><a href="#" class="title">Branding</a></div>
                                                                     <div class="box-info">
-                                                                        <div class="text">Enim ad minim veniam, quisnotrud exercitation ullamco labris.</div>
+                                                                        <div class="text">Branding is the face you or your company shows to the world. An effective brand strategy sets you apart.</div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -182,7 +182,7 @@
                                                                     <div class="box-icon">
                                                                         <div class="number icon-1">04</div><a href="#" class="icons"><i class="alab-app-development"></i></a><a href="#" class="title">App Development</a></div>
                                                                     <div class="box-info">
-                                                                        <div class="text">Enim ad minim veniam, quisnotrud exercitation ullamco labris.</div>
+                                                                        <div class="text">Bringing your idea to a mobile specific world brings an unparalleled ease of use to the consumer.</div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -193,7 +193,7 @@
                                                                     <div class="box-icon">
                                                                         <div class="number icon-1">05</div><a href="#" class="icons"><i class="alab-creative-process"></i></a><a href="#" class="title">Copywriting</a></div>
                                                                     <div class="box-info">
-                                                                        <div class="text">Enim ad minim veniam, quisnotrud exercitation ullamco labris.</div>
+                                                                        <div class="text">These wordsmiths develop advertising concepts, and deliver the verbal content that accompanies the visual elements.</div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -204,7 +204,7 @@
                                                                     <div class="box-icon">
                                                                         <div class="number icon-1">06</div><a href="#" class="icons"><i class="alab-software"></i></a><a href="#" class="title">Software</a></div>
                                                                     <div class="box-info">
-                                                                        <div class="text">Enim ad minim veniam, quisnotrud exercitation ullamco labris.</div>
+                                                                        <div class="text">We can design, develop new application software, or edit and make existing software better.</div>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -261,7 +261,7 @@
                                                                 <div class="box-info">
                                                                     <div class="group-progress-bar-list">
                                                                         <div class="progress-item">
-                                                                            <div class="heading">Designing</div>
+                                                                            <div class="heading">Design</div>
                                                                             <div class="progress">
                                                                                 <div data-width="100%" class="progress-bar"></div>
                                                                             </div>
@@ -292,31 +292,31 @@
                                                             <div class="box-item box-item-1">
                                                                 <div class="box-heading">Our Mission</div>
                                                                 <div class="box-info">
-                                                                    <div class="text">Consectetur adipisicing elit, sed do eiusmod tempor dunt ut labore et dolore magna aliqua.</div>
-                                                                    <div class="text">Consectetur adipisicing elit, sed do eiusmod tempor dunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. Consectetur adipisicing elit, sed do eiusmod tempor dunt.</div>
+                                                                    <div class="text">"To grow our client's company and brand beyond even their wildest expectation by creating an environment in which our employees can produce their best work."</div>
+                                                                    <div class="text">We accomplish this by abding by our Values and creating a workplace that encourages open and healthy conversation, eliminating drama immediately, learning and development, taking risks and supporting each other. We only accomplish these things together through respect . . no one is ever more important than the other. </div>
                                                                 </div>
                                                             </div>
                                                         </div>
                                                         <div class="col-sm-4">
                                                             <div class="box-item box-item-1">
-                                                                <div class="box-heading">Our Value</div>
+                                                                <div class="box-heading">Our Values</div>
                                                                 <div class="box-info">
                                                                     <div class="group-list">
                                                                         <ul class="list-unstyled">
                                                                             <li>
-                                                                                <div class="text">Ut enim ad minim veniam</div>
+                                                                                <div class="text">Develop relationships that make a positive difference.</div>
                                                                             </li>
                                                                             <li>
-                                                                                <div class="text">Ut enim ad minim veniam, quis nostrud.</div>
+                                                                                <div class="text">Create outstanding products and unsurpassed customer service, to deliver value for everyone.</div>
                                                                             </li>
                                                                             <li>
-                                                                                <div class="text">Ut enim ad minim veniam, quis</div>
+                                                                                <div class="text">We work together, across boundaries, to lift each other up and meet the needs of our clients.</div>
                                                                             </li>
                                                                             <li>
-                                                                                <div class="text">Ut enim ad minim veniam.</div>
+                                                                                <div class="text">We value our teammates, encourage their development and reward their performance.</div>
                                                                             </li>
                                                                             <li>
-                                                                                <div class="text">Ut enim ad minim veniam, quis nostrud</div>
+                                                                                <div class="text">We are personally accountable for delivering on our commitments.</div>
                                                                             </li>
                                                                         </ul>
                                                                     </div>
@@ -343,7 +343,7 @@
                                         <div class="col-md-11">
                                             <div class="group-content">
                                                 <div class="group-title group-title-4">
-                                                    <h2 class="main-title">Some Cool Fun <span>fact</span> <span class="dot"></span> <span class="mute-title">Fact</span></h2></div>
+                                                    <h2 class="main-title">Some Cool Fun <span>facts</span> <span class="dot"></span> <span class="mute-title">Fact</span></h2></div>
                                                 <div class="group-wrapper">
                                                     <div class="row">
                                                         <div class="col-sm-2">
