--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
                                                 <li class="dropdown"><a href="javascript:void(0)" class="main-menu"><span class="text">Home</span><span class="icons-dropdown"><i class="fa fa-angle-right"></i></span></a>
                                                     <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
                                                     <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
-                                                    <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
+                                                    <li><a href="branding.html" class="main-menu"><span class="text">Branding</span></a></li>
                                                     <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
                                             </ul>
                                         </div>
@@ -90,7 +90,7 @@
                                         <ul class="nav-links nav navbar-nav">
                                             <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
                                             <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
-                                            <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
+                                            <li><a href="branding.html" class="main-menu"><span class="text">Branding</span></a></li>
                                             <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
                                         </ul>
                                     </div>
