--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                                                 <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
                                                 <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
                                                 <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
-                                                <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
+                                                <li><a href="branding.html" class="main-menu"><span class="text">Branding</span></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -90,7 +90,7 @@
                                             <li><a href="index.html" class="main-menu"><span class="text">Home</span></a></li>
                                             <li><a href="about-us.html" class="main-menu"><span class="text">About</span></a></li>
                                             <li><a href="services.html" class="main-menu"><span class="text">Services</span></a></li>
-                                            <li><a href="contact.html" class="main-menu"><span class="text">Contact</span></a></li>
+                                            <li><a href="branding.html" class="main-menu"><span class="text">Branding</span></a></li>
                                         </ul>
                                     </div>
                                 </nav>
