--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                                                             <div class="box-item">
                                                                 <div class="box-icon"><i class="alab-writing-notes"></i></div>
                                                                 <div class="box-info">
-                                                                    <div data-count="689" class="number">0</div>
+                                                                    <div data-count="947" class="number">0</div>
                                                                     <div class="title">Coffee Consumed (Cups)</div>
                                                                 </div>
                                                             </div>
@@ -377,8 +377,8 @@
                                                             <div class="box-item">
                                                                 <div class="box-icon"><i class="alab-shuffle-arrows"></i></div>
                                                                 <div class="box-info">
-                                                                    <div data-count="1427" class="number">0</div>
-                                                                    <div class="title">Item Deliver</div>
+                                                                    <div data-count="78" class="number">0</div>
+                                                                    <div class="title">Projects Completed</div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -476,6 +476,7 @@
                                 <div class="clearfix"> </div>
                             </div>
                         </section>
+                        <!--
                         <section class="our-portfolio layout-2 padding-top-100 padding-bottom-100">
                             <div class="box-content-wrap">
                                 <div class="container">
@@ -762,16 +763,17 @@
                         <div class="container">
                             <div class="footer-main-wrapper">
                                 <div class="row">
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="about-us-widget widget">
                                             <div class="footer-logo"><img src="assets/img/logo.png" alt="" /></div>
                                             <div class="content-widget">
-                                                <div class="text">Ut enim ad minim veniam, quis nostrud cittion ullamco laboris nisi ut aliquip cosquat uis aute irure dolor ullamco nisi inkabris reprhenderit labore.</div>
+                                                <div class="text">NERDISM - (noun)</div>
+                                                <div class="text">The practices or behaviours of nerds; nerdiness.</div>
                                                 <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a><a href="#" class="link pinterest"><i class="fa fa-pinterest-p"></i></a><a href="#" class="link google"><i class="fa fa-google"></i></a></div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="contact-us-widget widget">
                                             <div class="title-widget">contact us</div>
                                             <div class="content-widget">
@@ -785,41 +787,21 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="twitter-widget widget">
-                                            <div class="title-widget">Twitter widget</div>
+                                            <div class="title-widget">Services</div>
                                             <div class="content-widget">
                                                 <div class="recent-list">
                                                     <ul class="list-unstyled">
                                                         <li>
-                                                            <div class="text">Looking for awesome PSD template?</div>
-                                                            <div class="text">Find it here: <a href="http://swlabs.co/">http://tf.net/swlabs</a></div>
-                                                            <div class="date"><i class="fa fa-twitter"></i> 01 day ago</div>
-                                                        </li>
-                                                        <li>
-                                                            <div class="text">You need an image stock</div>
-                                                            <div class="text">Find it here: <a href="http://swlabs.co/">http://tf.net/swlabs</a></div>
-                                                            <div class="date"><i class="fa fa-twitter"></i> 01 day ago</div>
+                                                            <div class="text">Web Design & Development</div>
+                                                            <div class="text">Software Design & Development</div>
+                                                            <div class="text">Branding</div>
+                                                            <div class="text">Copywriting</div>
+                                                            <div class="text">App Development</div>
+                                                            <div class="text">General Nerdiness</div>
                                                         </li>
                                                     </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <div class="gallery-widget widget">
-                                            <div class="title-widget">Gallery</div>
-                                            <div class="content-widget">
-                                                <div class="gallery-wrapper">
-                                                    <div class="gallery-item">
-                                                        <a data-fancybox-group="group2" href="assets/img/gallery/gallery-2.jpg" class="link fancybox"><img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-responsive" /></a>
-                                                    </div>
-                                                    <div class="gallery-item">
-                                                        <a data-fancybox-group="group2" href="assets/img/gallery/gallery-2.jpg" class="link fancybox"><img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-responsive" /></a>
-                                                    </div>
-                                                    <div class="gallery-item">
-                                                        <a data-fancybox-group="group2" href="assets/img/gallery/gallery-2.jpg" class="link fancybox"><img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-responsive" /></a>
-                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -829,7 +811,7 @@
                         </div>
                     </div>
                     <div class="footer-copyright">
-                        <div class="text">&copy; Designed by Nerdy Murphy.</div>
+                        <div class="text">&copy; 2017 Nerdism.</div>
                     </div>
                 </div>
             </footer>
