--- a/about-us.html
+++ b/about-us.html
@@ -333,7 +333,8 @@
                                         <div class="about-us-widget widget">
                                             <div class="footer-logo"><img src="assets/img/logo.png" alt="" /></div>
                                             <div class="content-widget">
-                                                <div class="text">Ut enim ad minim veniam, quis nostrud cittion ullamco laboris nisi ut aliquip cosquat uis aute irure dolor ullamco nisi inkabris reprhenderit labore.</div>
+                                                <div class="text">NERDISM - (noun)</div>
+                                                <div class="text">The practices or behaviors of nerds; nerdiness.</div>
                                                 <div class="socials"><a href="#" class="link facebook"><i class="fa fa-facebook"></i></a><a href="#" class="link twitter"><i class="fa fa-twitter"></i></a></div>
                                             </div>
                                         </div>
