--- a/branding.html
+++ b/branding.html
@@ -348,7 +348,7 @@
                                                 <div class="group-title group-title-1 style-3">
                                                     <h2 class="main-title">our <span>portfolio</span> <span class="dot"></span> <span class="mute-title">Work</span></h2></div>
                                                 <div class="group-wrapper">
-                                                    <div class="group-filter filter-button-group"><a href="javascript:;" data-filter="*" class="filter-item active">All</a><a href="javascript:;" data-filter=".branding" class="filter-item">Branding</a><a href="javascript:;" data-filter=".print-ads" class="filter-item">Print Ads</a><a href="javascript:;" data-filter=".social" class="filter-item">Social</a><a href="javascript:;" data-filter=".package" class="filter-item">Package</a></div>
+                                                    <div class="group-filter filter-button-group"><a href="javascript:;" data-filter="*" class="filter-item active">All</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -447,12 +447,12 @@
                         <div class="container">
                             <div class="footer-main-wrapper">
                                 <div class="row">
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="footer-logo"><img src="assets/img/logo.png" alt="" />
                                             <div class="text">Nerdism</div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="contact-us-widget widget">
                                             <div class="title-widget">contact us</div>
                                             <div class="content-widget">
@@ -466,37 +466,22 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-3">
+                                    <div class="col-sm-4">
                                         <div class="our-products-widget widget">
                                             <div class="title-widget">our products</div>
                                             <div class="content-widget">
                                                 <ul class="info-list list-unstyled">
-                                                    <li class="item">Social media monitoring</li>
-                                                    <li class="item">Web & App solution</li>
-                                                    <li class="item">Creative process</li>
-                                                    <li class="item">Software Development</li>
+                                                    <li>
+                                                        <div class="text">Web Design & Development</div>
+                                                        <div class="text">Software Design & Development</div>
+                                                        <div class="text">Branding</div>
+                                                        <div class="text">Copywriting</div>
+                                                        <div class="text">App Development</div>
+                                                        <div class="text">Social Media</div>
+                                                        <div class="text">SEO</div>
+                                                        <div class="text">General Nerdiness</div>
+                                                    </li>
                                                 </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-3">
-                                        <div class="twitter-widget widget">
-                                            <div class="title-widget">Twitter widget</div>
-                                            <div class="content-widget">
-                                                <div class="recent-list">
-                                                    <ul class="list-unstyled">
-                                                        <li>
-                                                            <div class="text">Looking for awesome PSD template?</div>
-                                                            <div class="text">Find it here: <a href="http://swlabs.co/">http://tf.net/swlabs</a></div>
-                                                            <div class="date"><i class="fa fa-twitter"></i> 01 day ago</div>
-                                                        </li>
-                                                        <li>
-                                                            <div class="text">You need an image stock</div>
-                                                            <div class="text">Find it here: <a href="http://swlabs.co/">http://tf.net/swlabs</a></div>
-                                                            <div class="date"><i class="fa fa-twitter"></i> 01 day ago</div>
-                                                        </li>
-                                                    </ul>
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
