Final Commit for the Day

--- a/about-us.html
+++ b/about-us.html
@@ -365,6 +365,8 @@
                                                             <div class="text">Branding</div>
                                                             <div class="text">Copywriting</div>
                                                             <div class="text">App Development</div>
+                                                            <div class="text">Social Media</div>
+                                                            <div class="text">SEO</div>
                                                             <div class="text">General Nerdiness</div>
                                                         </li>
                                                     </ul>
