--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                                                 <div class="box-heading">Our Mission</div>
                                                                 <div class="box-info">
                                                                     <div class="text">"To grow our client's company and brand beyond even their wildest expectation by creating an environment in which our employees can produce their best work."</div>
-                                                                    <div class="text">We accomplish this by abiding by our Values and creating a workplace that encourages open and healthy conversation, eliminating drama immediately, learning and development, taking risks and supporting each other. We only accomplish these things together through respect . . no one is ever more important than the other. </div>
+                                                                    <div class="text">We accomplish this by abiding by our Values and creating a workplace that encourages open and healthy conversation, learning and development, taking risks and supporting each other. We only accomplish these things together through respect . . no one is ever more important than the other. </div>
                                                                 </div>
                                                             </div>
                                                         </div>
