About Us Images

--- a/about-us.html
+++ b/about-us.html
@@ -110,7 +110,7 @@
                                 <div class="page-title-content">
                                     <div class="container">
                                         <div class="box-content">
-                                            <div class="box-img"><img src="assets/img/about-us/about-us-01-banner.jpg" alt="" class="img-responsive"></div>
+                                            <div class="box-img"><img src="assets/img/service-7.png" alt="" class="img-responsive"></div>
                                         </div>
                                         <div class="group-content">
                                             <div class="group-title group-title-1 group-heading">
@@ -165,9 +165,9 @@
                                                     <h2 class="main-title">Office Environment</h2></div>
                                                 <div class="group-wrapper">
                                                     <div class="slide-gallery">
-                                                        <div class="gallery-item"><img src="assets/img/about-us/slide-vertical-1.jpg" alt="" class="img-responsive"></div>
-                                                        <div class="gallery-item"><img src="assets/img/about-us/slide-vertical-2.jpg" alt="" class="img-responsive"></div>
-                                                        <div class="gallery-item"><img src="assets/img/about-us/slide-vertical-1.jpg" alt="" class="img-responsive"></div>
+                                                        <div class="gallery-item"><img src="assets/img/slide-vertical-1.jpg" alt="" class="img-responsive"></div>
+                                                        <div class="gallery-item"><img src="assets/img/slide-vertical-2.jpg" alt="" class="img-responsive"></div>
+                                                        <div class="gallery-item"><img src="assets/img/slide-vertical-1.jpg" alt="" class="img-responsive"></div>
                                                     </div>
                                                     <div class="nav-slide-gallery"> </div>
                                                 </div>
@@ -181,7 +181,7 @@
                         <section class="why-us layout-1 padding-bottom-100">
                             <div class="box-content-wrap">
                                 <div class="box-content box-content-left">
-                                    <div class="box-img"><img src="assets/img/homepage/banner-adv-1.png" alt="" class="img-responsive"></div>
+                                    <div class="box-img"><img src="assets/img/about-us-branding.png" alt="" class="img-responsive"></div>
                                 </div>
                                 <div class="container">
                                     <div class="row">
