--- a/index.html
+++ b/index.html
@@ -86,12 +86,16 @@
                     </div>
                 </div>
             </header>
-            <!-- WRAPPER-->
+            <!--==== WRAPPER ====-->
             <div id="wrapper-content">
-                <!-- PAGE WRAPPER-->
+                <!--==== PAGE WRAPPER ====-->
                 <div id="page-wrapper">
                     <!-- MAIN CONTENT-->
                     <div class="main-content">
+
+                        <!--=================
+                           HEADER BANNER
+                        ==================-->
                         <section class="page-banner homepage-03">
                             <div class="slider-img-banner">
                                 <div style="background-image: url('assets/img/slider1.jpg')" class="slide">
@@ -134,6 +138,7 @@
                                 </div>
                             </div>
                         </section>
+                        <!-- /end HEADER BANNER -->
 
                         <!--=================
                             WHAT WE DO 
